--- a/examples/tsv/package.json
+++ b/examples/tsv/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "distance-matrix",
+  "name": "distance-matrix-tsv-example",
   "version": "1.0.0",
   "description": "Calculate large distance matrix using The Open Source Routing Machine",
   "main": "index.js",
@@ -7,13 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Stepan Kuzmin <to.stepan.kuzmin@gmail.com> (stepankuzmin.ru)",
-  "license": "ICS",
+  "license": "MIT",
   "dependencies": {
-    "async": "1.5.2",
-    "osrm": "4.9.1",
-    "ramda": "0.19.1"
-  },
-  "devDependencies": {
-    "tape": "4.4.0"
+    "turf": "2.0.2"
   }
 }
