another .travis.yml fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 dist: trusty
+addons:
+  apt:
+    sources:
+     - ubuntu-toolchain-r-test
+    packages:
+     - coreutils
+     - g++-4.8
+     - gdb
 language: node_js
 node_js:
   - "5"
