--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "distance-matrix",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Calculate large distance matrix using The Open Source Routing Machine",
   "main": "index.js",
   "scripts": {
@@ -12,13 +12,13 @@
   "author": "Stepan Kuzmin <to.stepan.kuzmin@gmail.com> (stepankuzmin.ru)",
   "license": "MIT",
   "dependencies": {
-    "async": "1.5.2",
+    "async": "2.0.0-rc.1",
     "osrm": "4.9.1",
-    "ramda": "0.19.1"
+    "ramda": "0.20.1"
   },
   "devDependencies": {
     "documentation": "v4.0.0-beta",
-    "eslint": "2.3.0",
+    "eslint": "2.6.0",
     "eslint-config-mourner": "2.0.0",
     "tape": "4.5.1"
   }
